--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -45,8 +45,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DebuggerEventsMonitor.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="MonitorCommandEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsConsoleOutputPackage.cs" />
   </ItemGroup>
