--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -46,8 +46,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DebugManager.cs" />
+    <Compile Include="Info.cs" />
     <Compile Include="Output.cs" />
     <Compile Include="DebugProcessVS.cs" />
+    <Compile Include="OutputWindowService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VsConsoleOutputPackage.cs" />
   </ItemGroup>
