--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -56,6 +56,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="c_sharp">
+      <HintPath>..\c_sharp\bin\Debug\netstandard2.0\c_sharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
