--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -45,11 +45,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DebugManager.cs" />
-    <Compile Include="Output.cs" />
-    <Compile Include="Pipes.cs" />
+    <Compile Include="Managers\DebugManager.cs" />
+    <Compile Include="Outputs\OutputText.cs" />
+    <Compile Include="Pipes\Pipes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VsConsoleOutputPackage.cs" />
+    <Compile Include="Package\VsConsoleOutputPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -69,6 +69,9 @@
     <PackageReference Include="System.Management">
       <Version>4.6.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
