--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="service\Debug.cs" />
+    <Compile Include="service\DllInjector.cs" />
     <Compile Include="service\Output.cs" />
     <Compile Include="service\Pipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +64,7 @@
       <HintPath>..\c_sharp\bin\Debug\netstandard2.0\c_sharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.202" ExcludeAssets="runtime" />
@@ -71,7 +73,9 @@
       <Version>4.6.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="settings\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="resource\license\lic.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -85,6 +89,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\cpp\cpp.vcxproj">
+      <Project>{dd4b6477-de37-4d52-b23b-4fbfc8e026b1}</Project>
+      <Name>cpp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
