--- a/VsConsoleOutput/VsConsoleOutput.csproj
+++ b/VsConsoleOutput/VsConsoleOutput.csproj
@@ -31,7 +31,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\build\Debug\</OutputPath>
+    <IntermediateOutputPath>..\build\Debug\</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -39,61 +40,51 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\build\Release\</OutputPath>
+    <IntermediateOutputPath>..\build\Release\</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="service\Debug.cs" />
-    <Compile Include="service\DllInjector.cs" />
     <Compile Include="service\Output.cs" />
     <Compile Include="service\Pipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="package\VsConsoleOutputPackage.cs" />
-    <Compile Include="service\Solution.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="resource\document\readme.md" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="c_sharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\c_sharp\bin\Debug\netstandard2.0\c_sharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.202" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.3.2099" />
-    <PackageReference Include="System.Management">
-      <Version>4.6.0</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="settings\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="resource\license\lic.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="resource\document\license.txt">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="resource\picture\logo.png">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="resource\picture\Preview.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="resource\icon\Icon128.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\cpp\cpp.vcxproj">
+    <ProjectReference Include="..\console.proxy.cpp\console.proxy.cpp.vcxproj">
       <Project>{dd4b6477-de37-4d52-b23b-4fbfc8e026b1}</Project>
-      <Name>cpp</Name>
+      <Name>console.proxy.cpp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\console.proxy.cs\console.proxy.cs.csproj">
+      <Project>{2f0173fd-0e34-44ec-9826-cc7bfd1345d9}</Project>
+      <Name>console.proxy.cs</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
