--- a/vsconsoleoutput.plugin.vs/vsconsoleoutput.plugin.vs.csproj
+++ b/vsconsoleoutput.plugin.vs/vsconsoleoutput.plugin.vs.csproj
@@ -14,7 +14,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VsConsoleOutput</RootNamespace>
-    <AssemblyName>VsConsoleOutput</AssemblyName>
+    <AssemblyName>vsconsoleoutput.plugin.vs</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
