--- a/vsconsoleoutput.plugin.vs/vsconsoleoutput.plugin.vs.csproj
+++ b/vsconsoleoutput.plugin.vs/vsconsoleoutput.plugin.vs.csproj
@@ -47,11 +47,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="service\Debug.cs" />
     <Compile Include="service\Output.cs" />
-    <Compile Include="service\Pipe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="package\VsConsoleOutputPackage.cs" />
+    <Compile Include="service\pipes\EventHandlerExtensions.cs" />
+    <Compile Include="service\pipes\IPipe.cs" />
+    <Compile Include="service\pipes\Pipe.cs" />
+    <Compile Include="service\pipes\PipeServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resource\document\readme.md" />
@@ -89,6 +97,10 @@
     <Content Include="resource\picture\preview_metaproject.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\console.proxy.cpp.x64\console.proxy.cpp.x64.vcxproj">
+      <Project>{291d7f50-a08f-412b-bab1-d5b4171fac5f}</Project>
+      <Name>console.proxy.cpp.x64</Name>
+    </ProjectReference>
     <ProjectReference Include="..\console.proxy.cpp\console.proxy.cpp.vcxproj">
       <Project>{dd4b6477-de37-4d52-b23b-4fbfc8e026b1}</Project>
       <Name>console.proxy.cpp</Name>
@@ -96,6 +108,10 @@
     <ProjectReference Include="..\console.proxy.cs\console.proxy.cs.csproj">
       <Project>{2f0173fd-0e34-44ec-9826-cc7bfd1345d9}</Project>
       <Name>console.proxy.cs</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\vsconsoleoutput.helper\vsconsoleoutput.helper.vcxproj">
+      <Project>{bef4372b-b968-436c-878c-70a43ec34cff}</Project>
+      <Name>vsconsoleoutput.helper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
